--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "lodash": "^4.17.21",
+    "mobx": "^6.3.0",
+    "mobx-react-lite": "^3.2.0",
+    "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-flow-renderer": "^9.5.3",
