--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@craco/craco": "^6.1.2",
     "@headlessui/react": "^1.1.1",
+    "@heroicons/react": "^1.0.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -21,6 +22,7 @@
     "react-flow-renderer": "^9.5.3",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
+    "use-debounce": "^6.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
