--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "use-debounce": "^6.0.1",
+    "use-keyboard-shortcut": "^1.0.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
